cv/style.css
html {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  padding: 0;
  margin: 0;
}
body {
  height: 1115px;
  width: 893px;
  position: absolute;
  padding: 0;
  margin: 0;
}

.header {
  display: flex;
  align-items: center;
  justify-content: end;
  margin: 0px;
}
.header-img-container {
  position: absolute; z-index: 1;
  left: 115px;
  top: 6px;
  width: 120px;

  overflow: hidden;
  border-radius: 50%;
  border: 10px solid #967E5A;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #E9C2AD;
}
.header-img-container img {
  width: 100%;
  object-fit: contain;
  object-position: center;
}
.header-title {
  background-color: #967E5A;
  width: 75%;
  height: 90px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: space-evenly;
  position: absolute;
  top: 31px;
  margin-right: 20px;
  border-radius: 10px;
}
.header-title h1,
.header-title h3 {
  margin: 0 10px;
  color: #FFFFFF;
}
.header-title h3 {
  font-size: 22px;
}

.badge-icon,
.badge-icon div {
  flex: 1;
  height: 11px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  padding: 5px;
  margin: 4px;
}
.badge-icon img,
.badge-icon div img {
  height: 100%;
  margin-right: 8px;
}
.badge-icon span,
.badge-icon div span {
  text-wrap: nowrap;
  font-size: 15px;
  color: white;
}
.cert-icon {
  flex-direction: column;
  height: 22px !important;
  align-items: center !important;
  justify-content: center !important;
}
.cert-icon div {
  margin: 0;
  padding: 0;
}
.cert-icon-footer span {
  font-size: 10px !important;
  padding-top: 5px;
}

aside,
main {
  margin-top: 5px;
  margin-top: 166px;
  height: 90%;
  display: flex;
  flex-direction: column;
}

aside {
  width: 37%;
  margin-right: 5px;
  margin-left: 20px;
  float: left;
  background-color: #F2F2F2;
  border-radius: 5px;
  justify-content: space-between;
}

main {
  width: 56%;
  margin-right: 20px;
  float: right;
}
main h3 {
  padding:  0 0 5px 0;
  margin: 0;
}

.exp-card {
  position: relative;
  padding: 5px 0;
  position: relative;
  padding: 5px;
  border: 2px solid #967E5A;
  border-radius: 5px;
}

.exp-card-title {
  display: flex; 
  align-items: flex-end; 
  justify-content: space-between;
  margin-bottom: 2px;
  padding-right: 5px;
}
.exp-card-title-inner {
  margin-top: 5px;
}
.exp-card-title-detail {
  display: flex;
  align-items: center;
}
.exp-card-title-detail h5 {
  padding: 0;
  margin: 0;
  font-size: 16px;
  color: #28A4B3
}
.exp-card-title-detail small {
  color: #28A4B3;
  font-weight: 600;
  font-size: 0.55rem;
}
.exp-card-title-detail span {
  font-size: 12.5px;
  margin-left: 4px;
  font-weight: 600;
  padding-left: 4px;
  border-left: 1px solid #7F7F7F;
  margin-bottom: 1px;
}
.exp-card-title-detail-sub {
  font-weight: 600 !important;
}
.exp-card-title-detail-sub h5 {
  color: #1b737d;
}
.exp-card-title-detail-sub span {
  color: #6f5d43;
}
.exp-card-subtitle {
  color: #4e4e4e !important;
  font-size: 8px !important;
}
.exp-tasks-container {
  font-size: small;
  text-align: left;
  margin-top: 0;
  padding-left: 0px;
  margin-bottom: 0;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
  font-weight: 500;
}
.exp-task {
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 1px 0 3px 0;
  background-color: #F2F2F2;
  font-size: 15px;
}

.exp-break-card {
  margin-bottom: 20px;
}
.break-tooltip {
  position: absolute;
  right: 5px;
  top: -13px;
  font-size: x-small;
  z-index: 1;
  background-color: white;
  font-weight: 600;
  font-size: 12px;
  border: 2px solid #967E5A;
  border-radius: 5px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}
.break-tooltip div {
  margin: 0;
  padding: 2px 6px;
}
.company-tooltip {
  border-right: 2px solid #967E5A;
}

.section-title {
  color: #967E5A;
  font-size: 20px;
}

.contact-section {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
  padding-top: 10px;
  margin: 0 5px;
  margin-bottom: 5px;
  padding-top: 0px;
}
.contact-section-title {
  padding-left: 5px;
  text-align: start;
  margin: 10px 0;
  width: 100%;
  margin-top: 5px;
}
.contact-section-body {
  font-size: 16px;
  margin-left: 5px;
  width: 100%;
}
.contact-section-item {
  margin-bottom: 5px;
  display: flex;
  font-weight: 500;
}
.contact-section-item div {
  font-weight: 600;
  color: #28A4B3;
  margin-right: 5px;
}
.contact-section-item span {
  font-size: 15px;
}

.education-section-title {
  padding-left: 10px;
  margin: 10px 0;
}
.education-section-body {
  margin: 0 5px;
  margin-right: 10px;
}
.education-section-item {
  padding: 0;
  margin-top: 0;
  margin-bottom: 8px;
  padding-left: 5px;
}
.education-section-item-title {
  color: #28A4B3;
  font-weight: 600;
  font-size: 16px;
}
.education-section-item-subtitle {
  font-size: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-weight: 500;
}

.certifications-section,
.skills-section,
.languages-section {
  display: flex;
  flex-direction: row;
  width: auto;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
  padding-top: 10px;
  margin: 0 5px;
  margin-bottom: 5px;
}
.certifications-section-title,
.skills-section-title {
  padding-left: 5px;
  text-align: start;
  margin:5px 0;
  margin-bottom: 10px;
  width: 100%;
}

.languages-section-title {
  padding-left: 5px;
  text-align: start;
  margin: 5px 0px 10px;
  width: 100%;
}

.summary-section {
  padding-bottom: 28px;
}
.summary-section-title {
  margin-top: 0;
  margin-bottom: 5px;
}

.summary-section-body {
  font-size: 13px;
  text-align: justify;
  line-height: 16px;
}
.summary-section-body strong {
  font-weight: 500;
}

.experience-section {
  width: 100%;
}
.experience-section-title {
  margin-bottom: 5px;
}
.experience-section ul {
  font-size: small;
  text-align: left;
  margin-top: 0;
  list-style-position: outside;
  padding-left: 0px;
  margin-bottom: 0;
  list-style-type: none;
}
.experience-section li {
  border-radius: 5px;
  margin-bottom: 3px;
}

.other-experience-section {
  margin-top: 28px;
}
.other-experience-section-title {
  margin-bottom: 5px;
}

